# vpscraft

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpack.cmake  libssh.cmake  qt.cmake  setup.iss
include/: lib.h
include/lib/: error.h  lib.h  rcon.h  socket.h  ssh.h  vpscraft.h
include/ui/: connect.h  errorwindow.h  mainwindow.h
res/: res.qrc
src/: lib.cpp
src/cli/: main.cpp
src/lib/: error.c  error.cpp  lib.cpp  rcon.c  socket.c  socket.cpp  ssh.cpp  vpscraft.cpp
src/ui/: errorwindow.cpp  errorwindow.ui  mainwindow.cpp  mainwindow.ui
